--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^25.0.6",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
