--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,45 @@
 services:
+  proxy:
+    image: nginx:alpine
+    container_name: boissons-proxy
+    ports:
+      - "80:80"
+    volumes:
+      - ./ops/nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - kiosk
+      - admin
+      - backend
+    restart: unless-stopped
+
   backend:
     build: ./backend
     container_name: boissons-backend
-    ports:
-      - "127.0.0.1:3000:3000"
-    volumes:
-      - /var/lib/boissons:/data
     environment:
       DB_PATH: /data/app.db
       PORT: "3000"
       NODE_ENV: production
+    volumes:
+      - /var/lib/boissons:/data
     restart: unless-stopped
 
   kiosk:
     build: ./kiosk
     container_name: boissons-kiosk
-    ports:
-      - "127.0.0.1:8080:80"
     restart: unless-stopped
 
   admin:
     build: ./admin
     container_name: boissons-admin
-    ports:
-      - "127.0.0.1:8081:80"
+    restart: unless-stopped
+
+  backup:
+    build: ./ops/backup
+    container_name: boissons-backup
+    volumes:
+      - /var/lib/boissons:/data
+      - /var/backups/boissons:/backups
+    environment:
+      DB_PATH: /data/app.db
+      BACKUP_ROOT: /backups
     restart: unless-stopped
