Readme and modif nginx conf

--- a/ops/nginx/nginx.conf
+++ b/ops/nginx/nginx.conf
@@ -22,6 +22,7 @@ server {
   # API KIOSK (IP Kiosk)
   location /api/kiosk/ {
     allow 172.20.0.4;
+    allow 172.16.0.111;
     deny all;
 
     proxy_pass http://backend:3000;
